# life-universe-everything

./: .gitignore  Cargo.toml  README.md  index.html  rustfmt.toml  shell.nix
benches/: simulate.rs
docs/: index.html  life-universe-everything.js  life-universe-everything_bg.wasm
src/: app.rs  lib.rs  main.rs  optimizer.rs  simulator.rs
