[package]
name = "life-universe-everything"
version = "0.1.0"
edition = "2024"

[dependencies]
argmin = { version = "0.10.0", features = ["wasm-bindgen"] }
eframe = { version = "0.31.1", features = ["default_fonts"] }
egui_plot = "0.32.1"
json5 = "0.4.1"
serde = { version = "1.0.219", features = ["derive"] }


[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4.50"
web-sys = "0.3.70"
